# SW.Module.Logger

./: .clang-format  .gitignore  .gitmodules  Build-Logger.lua  CMakeLists.txt  Module.lua  README.md
.github/workflows/: ci.yml
src/Logger/: LogCustomFormatters.hpp  LogSystem.cpp  LogSystem.hpp  Logger.hpp
tests/: test.cpp
